[gd_scene load_steps=10 format=2]

[ext_resource path="res://objects/car-farara-sport-black.obj" type="ArrayMesh" id=1]
[ext_resource path="res://objects/car/car.gd" type="Script" id=2]
[ext_resource path="res://objects/roue.png" type="Texture" id=3]
[ext_resource path="res://objects/car/tractor.obj" type="ArrayMesh" id=4]
[ext_resource path="res://objects/scardinius.obj" type="ArrayMesh" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 1, 3.189 )

[sub_resource type="CylinderMesh" id=2]
top_radius = 1.2
bottom_radius = 1.2
height = 0.5

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.647059, 0.627451, 0.627451, 1 )

[sub_resource type="SpatialMaterial" id=5]

[node name="car" type="VehicleBody"]
script = ExtResource( 2 )

[node name="CSGMesh" type="CSGMesh" parent="."]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, -0.0155985 )
visible = false
mesh = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0517, 0 )
shape = SubResource( 1 )

[node name="Driver" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0607834, 2.20693, 3.45533 )

[node name="Left1" type="RayCast" parent="Driver"]
enabled = true
cast_to = Vector3( 5, 0, 5 )
collision_mask = 2
collide_with_areas = true

[node name="Left2" type="RayCast" parent="Driver"]
enabled = true
cast_to = Vector3( 5, 0, 0 )
collision_mask = 2
collide_with_areas = true

[node name="Right1" type="RayCast" parent="Driver"]
enabled = true
cast_to = Vector3( -5, 0, 5 )
collision_mask = 2
collide_with_areas = true

[node name="Right2" type="RayCast" parent="Driver"]
enabled = true
cast_to = Vector3( -5, 0, 0 )
collision_mask = 2
collide_with_areas = true

[node name="Front" type="RayCast" parent="Driver"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.169094, 0 )
enabled = true
cast_to = Vector3( 0, 0, 10 )
collision_mask = 2
collide_with_areas = true

[node name="Driver2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0607834, 2.20693, 3.45533 )

[node name="Left1" type="RayCast" parent="Driver2"]
enabled = true
cast_to = Vector3( 5, 0, 5 )
collide_with_areas = true

[node name="Left2" type="RayCast" parent="Driver2"]
enabled = true
cast_to = Vector3( 5, 0, 0 )
collide_with_areas = true

[node name="Right1" type="RayCast" parent="Driver2"]
enabled = true
cast_to = Vector3( -5, 0, 5 )
collide_with_areas = true

[node name="Right2" type="RayCast" parent="Driver2"]
enabled = true
cast_to = Vector3( -5, 0, 0 )
collide_with_areas = true

[node name="Front" type="RayCast" parent="Driver2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.169094, 0 )
enabled = true
cast_to = Vector3( 0, 0, 10 )
collide_with_areas = true

[node name="VehicleWheel3" type="VehicleWheel" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1.43771, 0.528731, 1.80419 )
use_as_traction = true
use_as_steering = true
wheel_radius = 1.2
suspension_stiffness = 20.0

[node name="Sprite3D" type="Sprite3D" parent="VehicleWheel3"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.0163627, 0 )
visible = false
texture = ExtResource( 3 )

[node name="CSGMesh" type="CSGMesh" parent="VehicleWheel3"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.334829, 0, 0 )
visible = false
mesh = SubResource( 2 )
material = SubResource( 3 )

[node name="VehicleWheel4" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.841195, 0.528731, 1.80419 )
use_as_traction = true
use_as_steering = true
wheel_radius = 1.2
suspension_stiffness = 20.0

[node name="Sprite3D" type="Sprite3D" parent="VehicleWheel4"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.0163627, 0 )
visible = false
texture = ExtResource( 3 )

[node name="CSGMesh" type="CSGMesh" parent="VehicleWheel4"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.334829, 0, 0 )
visible = false
mesh = SubResource( 2 )
material = SubResource( 3 )

[node name="VehicleWheel2" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.841369, 0.528731, -2.15891 )
use_as_traction = true
wheel_radius = 1.2
suspension_stiffness = 20.0

[node name="Sprite3D" type="Sprite3D" parent="VehicleWheel2"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.0163627, 0 )
visible = false
texture = ExtResource( 3 )

[node name="CSGMesh" type="CSGMesh" parent="VehicleWheel2"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.334829, 0, 0 )
visible = false
mesh = SubResource( 2 )
material = SubResource( 3 )

[node name="VehicleWheel5" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.43771, 0.528731, -2.15891 )
use_as_traction = true
wheel_radius = 1.2
suspension_stiffness = 20.0

[node name="Sprite3D" type="Sprite3D" parent="VehicleWheel5"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.0163627, 0 )
visible = false
texture = ExtResource( 3 )

[node name="CSGMesh" type="CSGMesh" parent="VehicleWheel5"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.334829, 0, 0 )
visible = false
mesh = SubResource( 2 )
material = SubResource( 3 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]

[node name="CSGMesh2" type="CSGMesh" parent="."]
transform = Transform( -2.18557e-07, 0, 5, 0, 5, 0, -5, 0, -2.18557e-07, 0, 0, 0 )
visible = false
mesh = ExtResource( 4 )
material = SubResource( 5 )

[node name="CSGMesh3" type="CSGMesh" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.296592, 1.30245, -0.154361 )
mesh = ExtResource( 5 )

[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
